# ardrone

ardrone/: .gitignore  CMakeLists.txt  build.sh
ardrone/attitude/: CMakeLists.txt  ars.c  ars.h  attitude.c  attitude.h  main_attitude.c
ardrone/cmake/: ardrone.cmake
ardrone/fly/: CMakeLists.txt  controlthread.c  controlthread.h  main_fly.c  pid.c  pid.h
ardrone/gpio/: CMakeLists.txt  gpio.c  gpio.h  main_gpio.c
ardrone/motorboard/: CMakeLists.txt  main_motorboard.c  mot.c  mot.h  motorboard.c  motorboard.h
ardrone/navboard/: CMakeLists.txt  main_navboard.c  navboard.c  navboard.h
ardrone/udp/: CMakeLists.txt  main_udpclient.c  main_udpserver.c  udp.c  udp.h
ardrone/util/: type.h  util.c  util.h
ardrone/vbat/: CMakeLists.txt  i2c-dev.h  main_vbat.c  vbat.c  vbat.h
ardrone/video/: CMakeLists.txt  main_video.c  video.c  video.h
